﻿zg 05.03.2015 05:31:29 +0200 - build 4289

1. уточнение 4248: во враппере оставим старое поведение DM_SETTEXT.

zg 05.03.2015 03:31:02 +0200 - build 4288

1. 0002959: FCTL_SETPANELDIRECTORY перерисовывает экран когда не надо.

drkns 04.03.2015 02:57:17 +0200 - build 4287

1. Уточнение 4280.2.

drkns 03.03.2015 22:47:29 +0200 - build 4286

1. 0002957: Undo отменяет добавленную строку, но после сохранения файла она остаётся

2. Раскрываем главное меню в том числе и по стрелке вверх.

drkns 02.03.2015 22:15:32 +0200 - build 4285

1. Уточнение 4280.1.

drkns 01.03.2015 16:17:34 +0200 - build 4284

1. При определённых манипуляциях с QuickView могло происходить странное.

zg 01.03.2015 13:12:22 +0200 - build 4283

1. 0002956: Падение Фара на старте после выхода с панелью быстрого просмотра.

drkns 01.03.2015 02:12:37 +0200 - build 4282

1. Уточнение 4280.2.

drkns 01.03.2015 00:58:19 +0200 - build 4281

1. Уточнение 4280.1.

drkns 28.02.2015 23:56:47 +0200 - build 4280

1. FCTL_SETPANELDIRECTORY теперь возвращает 0 при неудаче и не порождает диалогов в процессе.

2. Рефакторинг. Возможны разнообразные чудеса в редакторе.

w17 27.02.2015 14:35:20 +0300 - build 4279

1. M#2954: Switch to Viewer (F6) loses current position when "Save file position" is OFF

svs 25.02.2015 19:08:58 +0300 - build 4278

1. SQLite 3.8.8.3

drkns 23.02.2015 19:43:02 +0200 - build 4277

1. Уточнение 4275.

2. Продолжение 4276.

drkns 21.02.2015 11:14:06 +0200 - build 4276

1. Некорректно работало разворачивание путей вида C:path.

drkns 21.02.2015 09:54:33 +0200 - build 4275

1. Рефакторинг.

shmuel 21.02.2015 00:52:00 +0200 - build 4274

1. Рефакторинг.

shmuel 20.02.2015 17:58:57 +0200 - build 4273

1. Рефакторинг.

zg 20.02.2015 01:01:34 +0200 - build 4272

1. уточнение 4262: если что-то в VE_READ приводило к перерисовке quickview - фар падал.

shmuel 19.02.2015 16:30:33 +0200 - build 4271

1. M#2950: InputRecordToName возвращает символ с кодом 1: ☺

w17 18.02.2015 23:36:18 +0300 - build 4270
