@@ -1,4 +1,8 @@
-﻿zg 05.03.2015 05:31:29 +0200 - build 4289
+﻿zg 05.03.2015 12:02:34 +0200 - build 4290
+
+1. всегда грузим плагины через LoadLibrary*, чтобы увеличить счётчик ссылок на длл.
+
+zg 05.03.2015 05:31:29 +0200 - build 4289
 
 1. уточнение 4248: во враппере оставим старое поведение DM_SETTEXT.
 
